# sla-sca

./: .flake8  .gitignore  Classifier_ING.js  Cloudshadow_Mask_ING.js  Histogram.js  ImageAvailability.js  LICENSE  Main_Code_mod_LR_no_botton_local  Main_Patches.js  Preparation_Module.js  README.md  classifier.py  cloud_shadow_mask.py  hill_shadow.py  main.py  prep.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: branch.yaml  release.yaml
docs/: conf.py  index.rst
js/: Altitude_Bins.js  Altitude_Bins_ING.js  Classifier.js  Classifier_ING.js  Cloudshadow_Mask.js  Cloudshadow_Mask_ING.js  Histogram.js  ImageAvailability.js  Main_Code.js  Main_Code_mod_LR_no_botton_local.js  Main_Patches.js  Preparation_Module.js  Preparation_Module_ING.js  gif_landsat.js
notebooks/: Untitled.ipynb  classifier.ipynb  hill-shadow.ipynb  main_patch.ipynb  prep.ipynb  sla.ipynb  test.ipynb
sla/: classifier.py  cloud_shadow_mask.py  hill_shadow.py  main_patches.py  prep.py  settings.py  utils.py
